--- a/dot.emacs.d/emacs.org
+++ b/dot.emacs.d/emacs.org
@@ -102,6 +102,14 @@ far:
 #+RESULTS:
 | inf-ruby-setup-keybindings | my-ruby-mode-hook | ac-ruby-mode-setup |
 
+** Emacs server
+#+begin_src emacs-lisp
+(if (file-exists-p
+ (concat (getenv "TMPDIR") "emacs"
+         (number-to-string
+          (user-real-uid)) "/server"))
+nil (server-start))
+#+end_src
 ** Haskell mode
 #+begin_src emacs-lisp
 
